# movie-recommender

./: .dockerignore  Dockerfile  README.md  app.py  app.yaml  main.py  pyproject.toml  requirements.txt
