[tool.poetry]
name = "movie-recommender"
version = "0.1.0"
description = ""
authors = ["Christian Barra <info@pybootcamp.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.14.1"
uvicorn = {extras = ["standard"], version = "^0.12.3"}
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
